# somnus

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  test.cc  test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc  test7.cc  test8.cc  test8.cfg
include/: actor.hpp  channel.hpp
somnus/: channel.hpp  event_dispatch.hpp  is_shared_ptr.hpp  rope.hpp  tether.hpp  yarn.hpp
src/: actor.cc  event_dispatch.cc  rope.cc  yarn.cc
