
add_executable(testa test.cc)
target_link_libraries(testa somnus)

add_executable(test1 test1.cc)
target_link_libraries(test1 somnus)

add_executable(test2 test2.cc)
target_link_libraries(test2 somnus)

add_executable(test3 test3.cc)
target_link_libraries(test3 somnus)

add_executable(test4 test4.cc)
target_link_libraries(test4 somnus)

add_executable(test5 test5.cc)
target_link_libraries(test5 somnus)
